# fastapi-template

./: .env.example  Dockerfile  README.md  app.dockerfile  celery.dockerfile  docker-compose.yml  fastapi.dockerfile  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 61f341d5d3da_create_users_and_whitelisted_tokes_.py  9c6c0087eb31_init.py
gunicorn/: gunicorn_conf.py
postman/: Auth.postman_collection.json
requirements/: requirements.in  requirements.txt
scripts/: start-dev.sh  start-prod.sh
src/: celery.py  config.py  database.py  fields.py  main.py  redis.py  schemas.py  validators.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  jwt.py  models.py  permissions.py  router.py  schemas.py  service.py  tasks.py  tokens.py  use_case.py  validators.py
src/common/: exceptions.py  schemas.py  use_case.py
src/database/: __init__.py  base.py  dependency.py  engine.py
src/users/: exceptions.py  models.py  router.py  schemas.py  service.py  use_case.py  validators.py
tests/: conftest.py
tests/auth/: test_routes.py
tests/factories/: __init__.py  base.py  user.py
