[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = ""
authors = ["Timur"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
SQLAlchemy = "^2.0.13"
pydantic = {version = "2.4.2", extras = ["email"]}
uvicorn = "^0.23.2"
python-jose = "^3.3.0"
alembic = "^1.11.0"
asyncpg = "^0.28.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic-settings = "2.0.3"
redis = "^5.0.1"
gunicorn = "^21.2.0"
celery = "^5.3.4"
flower = "^2.0.1"
psycopg = "^3.1.16"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
async-asgi-testclient = "^1.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
